[build-system]
requires = ["setuptools", "setuptools-scm", "wheel"]

[tool.setuptools_scm]
version_scheme = "post-release"

[project]
name = "ndonnx"
description = "A array-api implementation backed-up by ONNX."
readme = "README.md"
dynamic = ["version"]
authors = [{ name = "QuantCo, Inc.", email = "noreply@quantco.com" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.9"

[project.urls]
repository = "https://github.com/quantco/ndonnx"


[tool.setuptools.packages.find]
include = ["ndonnx"]
namespaces = false

[project.scripts]

[tool.docformatter]
black = true

[tool.black]
exclude = '''
/(
    \.eggs
  | \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 88

[tool.ruff.lint]
ignore = [
    "N803", # https://docs.astral.sh/ruff/rules/invalid-argument-name
    "N806", # https://docs.astral.sh/ruff/rules/non-lowercase-variable-in-function
    "E501", # https://docs.astral.sh/ruff/faq/#is-the-ruff-linter-compatible-with-black
    "N802",
]
select = [
    # pyflakes
    "F",
    # pycodestyle
    "E",
    "W",
    # isort
    "I",
    # pep8-naming
    "N",
    # pyupgrade
    "UP",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["I"]


[tool.mypy]
python_version = '3.9'
ignore_missing_imports = true
no_implicit_optional = true
check_untyped_defs = true
exclude = ["api-coverage-tests", "tests"]


[tool.typos.default]
extend-ignore-identifiers-re = [
    "scatter_nd",
    "arange",
]

[tool.pytest.ini_options]
pythonpath = [".", "src"]
addopts = "--ignore=api-coverage-tests --import-mode=importlib --cov=ndonnx --cov-report term-missing"
exclude = ["docs/"]
testpaths = ["tests"]
