[build-system]
requires = ["setuptools", "setuptools-scm"]

[tool.setuptools_scm]
version_scheme = "post-release"

[project]
name = "ndonnx"
description = "ONNX backed array library compliant with Array API standard."
readme = "README.md"
dynamic = ["version"]
authors = [
    { name = "Aditya Goel", email = "agoel4512@gmail.com" },
    { name = "Christian Bourjau", email = "christian.bourjau@quantco.com" },
]
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.10"
dependencies = ["numpy", "spox>=0.10", "typing_extensions"]
keywords = ["numpy", "onnx", "array-api"]

[project.urls]
repository = "https://github.com/quantco/ndonnx"

[tool.setuptools.packages.find]
include = ["ndonnx"]
namespaces = false

[tool.setuptools.package-data]
"ndonnx" = ["py.typed"]

[project.scripts]

[tool.docformatter]
black = true # only sets the style options to the default values of black

[tool.ruff]
line-length = 88

[tool.ruff.lint]
ignore = [
    "N803",  # https://docs.astral.sh/ruff/rules/invalid-argument-name
    "N806",  # https://docs.astral.sh/ruff/rules/non-lowercase-variable-in-function
    "E501",  # https://docs.astral.sh/ruff/faq/#is-the-ruff-linter-compatible-with-black
    "UP038", # https://github.com/astral-sh/ruff/issues/7871
    "N807",  # Free functions may start/end with dunders __array_namespace_info__
    "UP007",
]
select = [
    # pyflakes
    "F",
    # pycodestyle
    "E",
    "W",
    # isort
    "I",
    # pep8-naming
    "N",
    # pyupgrade
    "UP",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = '3.10'
no_implicit_optional = true
check_untyped_defs = true
# TODO: apply mypy to tests, too (update pre-commit-config, analogously)
exclude = ["array-api-tests", "tests"]

[[tool.mypy.overrides]]
module = ["onnxruntime"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--ignore=array-api-tests"
filterwarnings = [
    "ignore:.*google.protobuf.pyext.*:DeprecationWarning",
    # warnings about lossy casts
    "ignore::UserWarning:ndonnx._typed_array.ort_compat",
    # upstream test suite failed to automatically parse special cases
    "ignore:case for:UserWarning",
    # upstream test suite expected a special case but didn't find it
    "ignore:Special cases found for:UserWarning",
    # NumPy warnings for invalid values in divisions
    "ignore:.*invalid value encountered in (scalar )?divide.*:RuntimeWarning:numpy",
    "ignore:.*Mean of empty slice.*:RuntimeWarning:numpy",
    "ignore:.*Degrees of freedom.*:RuntimeWarning:numpy",
]

[tool.typos.default]
extend-ignore-identifiers-re = ["scatter_nd", "arange", "gather_nd"]
